# Driver-Suite-Bare-Metal

./: CMakeLists.txt  README.md
examples/gpio/: gpio.h  main.c
include/: adc.h  addressmap.h  dma.h  gpio.h  i2c.h  irq.h  pwm.h  spi.h  system.h  timer.h  uart.h
src/: adc.c  dma.c  gpio.c  i2c.c  irq.c  main.c  pwm.c  spi.c  system.c  timer.c  uart.c
